[package]
name = "mirror"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
strum = { version = "0.21", features = ["derive"] }
config = { version = "0.11", features = ["toml"] }
