[package]
name = "mirror"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
strum = { version = "0.21", features = ["derive"] }
config = { version = "0.11", features = ["toml"] }
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
bitflags = "1.2.1"
downcast-rs = "1.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
delegate = "0.6.0"
typed-builder = "0.9.0"
rand = "0.8.4"
generic-array = "0.14.4"
